# phc

./: .gdbinit  .gitignore  ChangeLog  FUTURE_WORK  Makefile.am  Makefile.in  Optimization_pass.h  README  README.apache  README.dataflow  README.md  README.profiling  README.svn  README.test  acinclude.m4  analyse.php  autogen.sh  bootstrap  circle.yml  config.h.in  configure  configure.ac  hello.php  hello.xml  libphc.cpp  phc-1.0.xsd  phc_sat_test.clp  sample.clp  test_benches
config/: phc_missing
doc/: RELEASE.HOWTO  php_SAPI_HOWTO
doc/license/: LICENSE  README.license  flex_copyright_notices.txt
doc/manual/: Makefile  README  apioverview.rst  codingguide.rst  conf.py  demo.rst  devintro.rst  devintro.sgml  generatedcode.sgml  gettingstarted.rst  gettingstarted.sgml  grammar.rst  grammar.sgml  include.rst  index.rst  install.rst  install.sgml  limitations.rst  limitations.sgml  maketeatheory.rst  maketeatheory.sgml  manual.dsl  manual.dtd  manual.rst  manual.sgml  optimization.rst  othersources.rst  porting.rst  porting.sgml  refintro.rst  representingphp.rst  representingphp.sgml  runningphc.rst  runningphc.sgml  testing.rst  traversalintro.rst  treetutorial1.rst  treetutorial1.sgml  treetutorial2.rst  treetutorial2.sgml  (+10 more)
doc/user_manual/: index.html  portingandpackagingphc.html
downloaded_php/: download_php.pl
libltdl/: Makefile.in  aclocal.m4  configure  configure.ac
libltdl/config/: ltmain.sh
libltdl/m4/: ltversion.m4
libphc/: builtin_functions.c  support_routines.c
m4/: ax_boost_regex.m4  libcrun.m4  libtool.m4  php-embed.m4  svn.m4
misc/: Doxyfile  RELEASE.HOWTO  allchars_gen.c  bench.ideal.c  bench_compare  benchmark  comp  compile_profiled  constant_fold_test_generator.php  convert_AST_names.pl  convert_HIR_names.pl  copy_expected  debug.ini  debug_mem.ini  dynamic_things_counter.php  get_libphp5_archive  literal_test.php  logs.php  makerelease.sh  old-status  phc.book  phc_bash_completion  phcdiff  php_SAPI_HOWTO  phpconfigure  profile.ini  replace_concat_includes.php  run_nightly.php  tryout.c  valgrind_suppressions  xmldiff
misc/downloaded_php/: download_php.pl
misc/old/: compile_profiled  get_libphp5_archive  old-status  post-commit  post-commit.php  tryout2.c
misc/old_comments/: sccp.txt
old_comments/: old_hssa_comments.txt
plugins/tests/: Collect_all_pointers.h  canonical_unparser.cpp  cloning.cpp  goto_uppering.cpp  inconsistent_st_attr.cpp  limit_assignments.cpp  line_numbers.cpp  linear.cpp  lost_attributes.cpp  pre_vs_post_count.cpp  raise_globals.cpp  run_once.cpp  source_vs_semantic_values.cpp  strip_includes.cpp  strip_includes.la  xml_roundtrip.cpp
plugins/tools/: C_unparser.cpp  add_comment.cpp  debug_zval.cpp  demi_eval.cpp  dynamic_things.cpp  function_finder.cpp  get_defines.cpp  get_defines.la  purity_test.cpp  reduce_statements.cpp  remove_all.cpp  replace_include_constants.cpp  test_ssi.cpp
plugins/tutorials/: Comment_ifs.cpp  Expand_includes.cpp  InsertDB.cpp  MySQL2DBX.cpp  count_classes.cpp  count_function_calls_difficult.cpp  count_function_calls_easy.cpp  count_statements.cpp  count_statements_difficult.cpp  count_statements_easy.cpp  helloworld.cpp  show_traversal_order.cpp
run_tests/: longer_test  run_benchmarks  test_benches  test_configure
run_tests/bench_lists/: RUBBoS.txt  eve.txt  mybloggie.txt  phc-tests  php-benchmarks  phpSQLiteAdmin.txt  tiger.txt  zend.txt
runtime/: arrays.c  builtin_functions.c  debug.c  isset.c  methods.c  misc.c  oop.c  string.c  support.c  support_routines.c  templates.lir  unset.c  var_vars.c  zval.c
runtime/templates/: templates_new.c
src/: phc.cpp  phc_compile_plugin.in
src/analyse/: address_taken.clp  base.clp  cfg.clp  cfgdot.clp  copyprop.clp  dce.clp  do_cfg.clp  do_optimize.clp  do_versioning.clp  errors.clp  generic.clp  linearize_cfg.clp  live.clp  live.clp.imperative_test  live.clp.set_test  optimize.clp  util.clp  var_info.clp  xml_unparser.clp
src/ast_to_hir/: AST_annotate.cpp  AST_annotate.h  AST_lower_expr.cpp  AST_lower_expr.h  AST_shredder.cpp  AST_shredder.h  AST_to_HIR.h  Annotate.cpp  Annotate.h  Check_lowering.cpp  Check_lowering.h  Check_uppering.cpp  Check_uppering.h  Desugar.cpp  Desugar.h  Early_lower_control_flow.cpp  Early_lower_control_flow.h  Echo_split.cpp  Echo_split.h  List_shredder.cpp  List_shredder.h  Lower_control_flow.cpp  Lower_control_flow.h  Lower_expr.cpp  Lower_expr.h  Lower_expr_flow.cpp  Lower_expr_flow.h  Pre_post_op_shredder.cpp  Pre_post_op_shredder.h  Remove_solo_exprs.h  Remove_solo_variables.h  Shredder.cpp  Shredder.h  Split_multiple_arguments.cpp  Split_multiple_arguments.h  Split_unset_isset.cpp  Split_unset_isset.h  Strip_comments.cpp  Strip_comments.h  Switch_bin_op.cpp  (+7 more)
src/codegen/: AST_to_HIR.h  Assign_temps.cpp  Assign_temps.h  Check_lowering.cpp  Check_lowering.h  Check_uppering.cpp  Check_uppering.h  Clarify.cpp  Clarify.h  Compile_C.cpp  Compile_C.h  Copy_propagation.cpp  Copy_propagation.h  Dead_code_elimination.cpp  Dead_code_elimination.h  Generate_C.cpp  Generate_C.h  Generate_C_annotations.cpp  Generate_C_annotations.h  Generate_C_pass.cpp  Generate_C_pass.h  Generate_LIR.cpp  Generate_LIR.h  Goto_uppering.cpp  Goto_uppering.h  Lift_functions_and_classes.cpp  Lift_functions_and_classes.h  Lower_control_flow.cpp  Lower_control_flow.h  Lower_expr.cpp  Lower_expr.h  Lower_expr_flow.cpp  Lower_expr_flow.h  MICG_checker.h  MICG_gen.cpp  MICG_gen.h  Note_top_level_declarations.cpp  Note_top_level_declarations.h  Obfuscate.h  Prep.cpp  (+15 more)
src/embed/: embed.cpp  embed.h  optimize.cpp  util.cpp  util.h
src/generated_src/: ast.tea  hir.tea  lir.tea  micg.tea  mir.tea  mir.tea.ideal  phc.ggo  phc.tea  php.gperf  php_dot.ypp  php_parser.ypp  php_scanner.lex
src/hir_to_mir/: Annotate.cpp  Annotate.h  Check_lowering.h  Check_uppering.cpp  Check_uppering.h  Desugar.cpp  Desugar.h  Early_lower_control_flow.cpp  Early_lower_control_flow.h  Echo_split.cpp  Echo_split.h  HIR_annotate.cpp  HIR_annotate.h  HIR_lower_expr.cpp  HIR_lower_expr.h  HIR_shredder.cpp  HIR_shredder.h  HIR_to_MIR.h  List_shredder.cpp  Shredder.h  (+18 more)
(+2336 files in other folders)
